# vc_bbb

./: MANIFEST.in  README.md  setup.cfg  setup.py
indico_plugin_vc_bbb.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
indico_vc_bbb/: api.py  blueprint.py  controllers.py  forms.py  plugin.py  util.py
indico_vc_bbb/templates/: buttons.html  event_buttons.html  info_box.html  list_recordings.html  manage_event_info_box.html  manage_event_preload_slides.html  manage_recordings.html
indico_vc_bbb/translations/en_US/LC_MESSAGES/: messages.po
indico_vc_bbb/translations/uk_UA/LC_MESSAGES/: messages.mo  messages.po
